# EzWindowsTools

./: .gitignore  AGENTS.md  Cargo.toml  config_manager.py  guardian.py  manager.py  module_base.py  module_manager.py  power_manager.py
.github/workflows/: build.yml
locales/: en.jsonc  zh-CN.jsonc  zh-TW.jsonc
modules/: __init__.py
modules/refresh_guardian/: __init__.py  core.py
modules/screen_guardian/: __init__.py  core.py
src/: auto_start.rs  i18n.rs  lib.rs  main.rs  tray.rs
src/config/: manager.rs  mod.rs  schema.rs
src/gui/: mod.rs
src/module/: manager.rs  mod.rs
src/module/refresh_guardian/: core.rs  mod.rs
src/module/screen_guardian/: core.rs  mod.rs
src/win32/: display.rs  power.rs
ui/: config_window.py  tray_manager.py
utils/: auto_start.py  display_manager.py  i18n.py  jsonc.py
